NEW IN WAF 1.5.17
-----------------
* Fixed a typo in flex.py
* Fixed the use of waf cache with Python 3.x builds
* Fixed a bug in the "Python.h" detection
* New example for Cython
* New example for CUDA

NEW IN WAF 1.5.16
-----------------
* Handle deleted files and folders gracefully
* Better interaction between on_results/update_outputs and deleted files
* Try to use bunzip2 for the python versions that have no bzip2 support
* Automatic tool download from the 3rdparty repository
* New option for including 3rdparty tools (./waf-light --make-waf --tools=boost,fluid)
* New tool for detecting user errors (wagner)
* A predefined os environment may be passed through xyz.env.env = {}
* New method for creating empty folders: bld.install_dir('{PREFIX}/lib')
* Better interaction between swig and qt4, bison and flex
* New example for abi checks         playground/abi_checks
* New example for rpath handling     playground/crazy_rpath
* New example for dumping makefiles  playground/makefile_dumper
* New example for thread-less builds playgroud/nothreads

NEW IN WAF 1.5.15
-----------------
* Fix for ccache + suncc
* Minor vala improvements
* Minor qt4 improvements
* gccdeps.py improvements
* MSVC detection improvements
* Fixed the 'args' parameter in conf.check(...)
* Fixed a regression for the python.py tool on Python 3.x
* Scanner methods are executed properly whenever the source change
* Stop faster when an error occurs
* New debugging zones "waf --zones=group"

NEW IN WAF 1.5.14
-----------------
* new doc format (docbook -> asciidoc)
* use a thread pool to avoid the creation of too many threads (long configurations)
* better exception handling
* fixed a regression with always + on_results
* capture the stderr/stdout on unit test execution
* execute unit tests in parallel
* support for variables in pkg-config tests
* read files generated in the build directory by foreign processes
* better config.log output

NEW IN WAF 1.5.13
-----------------