@@ -3,6 +3,7 @@ NEW IN WAF 1.5.17
 * Fixed a typo in flex.py
 * Fixed the use of waf cache with Python 3.x builds
 * Fixed a bug in the "Python.h" detection
+* d library detection (phobos 1, 2 or tango)
 * New example for Cython
 * New example for CUDA
 
